<!--
  ~  Copyright (c) 2021 De Staat der Nederlanden, Ministerie van Volksgezondheid, Welzijn en Sport.
  ~   Licensed under the EUROPEAN UNION PUBLIC LICENCE v. 1.2
  ~
  ~   SPDX-License-Identifier: EUPL-1.2
  ~
  -->

<resources>
    <string name="app_name">CoronaTester</string>
    <string name="app_name_dev">CoronaTester (Dev)</string>
    <string name="app_name_test">CoronaTester (Test)</string>
    <string name="app_name_acc">CoronaTester (Acc)</string>
    <string name="welcome_header">Welkom op CoronaTester</string>
    <string name="welcome_subtext">Heb je klachten die passen bij het coronavirus? Maak hier een afspraak voor een test bij een GGD of een commerciele testplaats.\n\nKijk op rijksoverheid.nl/coronatest voor meer informatie over testen op corona.</string>
    <string name="cd_back">Terug</string>
    <string name="welcome_get_tested_button">Ik wil me laten testen</string>
    <string name="welcome_about_this_app">Over deze app</string>
    <string name="coronatest_result_url">https://coronatest.nl/inloggen?target=testen%2Fmeest-recente-testuitslag</string>
    <string name="placeholder">Placeholder text</string>
    <string name="about_section1_title">Wat doet CoronaTester?</string>
    <string name="about_section1_subtext">De app geeft een overzicht van alle testplaatsen bij jou in de buurt. Zo weet je waar je terecht kan als je je wilt laten testen. Door slim te testen krijgen we samen corona onder controle.</string>
    <string name="about_section2_title">Hoe zit het met mijn privacy?</string>
    <string name="about_section2_subtext">Op basis van de door u ingevoerde postcode worden testlocaties weergegeven. Uw postcode wordt niet opgeslagen.</string>
</resources>
