<?xml version="1.0" encoding="utf-8"?><!--
  ~  Copyright (c) 2021 De Staat der Nederlanden, Ministerie van Volksgezondheid, Welzijn en Sport.
  ~   Licensed under the EUROPEAN UNION PUBLIC LICENCE v. 1.2
  ~
  ~   SPDX-License-Identifier: EUPL-1.2
  ~
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/activity_horizontal_margin">

            <TextView
                android:id="@+id/welcome_header"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/welcome_header"
                android:textAppearance="@style/TextAppearance.App.Headline1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.10" />

            <TextView
                android:id="@+id/welcome_subtext"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:autoLink="web"
                android:text="@string/welcome_subtext"
                android:textAppearance="@style/TextAppearance.App.Body1"
                android:textColorLink="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/welcome_header" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_get_tested"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="24dp"
                android:backgroundTint="@color/light_blue"
                android:text="@string/welcome_get_tested_button"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textStyle="normal"
                app:cornerRadius="8dp"
                app:layout_constraintBottom_toTopOf="@+id/btn_get_results"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_get_results"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="48dp"
                android:backgroundTint="@color/white"
                android:text="Naar mijn uitslag"
                android:textAllCaps="false"
                android:foreground="?android:attr/selectableItemBackground"
                android:textColor="@color/light_blue"
                android:textStyle="normal"
                app:cornerRadius="8dp"
                app:layout_constraintBottom_toTopOf="@+id/ic_about_app"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageView
                android:id="@+id/ic_about_app"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_info"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/text_about_app"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:textColor="@color/black"
                android:text="@string/welcome_about_this_app"
                app:layout_constraintBottom_toBottomOf="@+id/ic_about_app"
                app:layout_constraintStart_toEndOf="@+id/ic_about_app"
                app:layout_constraintTop_toTopOf="@+id/ic_about_app" />



        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>


</layout>